--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>tocode-franework</module>
         <module>tocode-common</module>
         <module>tocode-system</module>
+        <module>tocode-generator</module>
     </modules>
 
     <properties>
@@ -22,9 +23,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <hutool.version>5.8.18</hutool.version>
-        <spring-boot.version>2.7.11</spring-boot.version>
-        <mybatis-plus.version>3.5.6</mybatis-plus.version>
+        <mybatis.plus.version>3.5.6</mybatis.plus.version>
         <lombok.version>1.18.26</lombok.version>
+        <druid.version>1.1.20</druid.version>
+        <mysql.version>8.0.25</mysql.version>
+        <fastjson2.version>2.0.40</fastjson2.version>
+        <mapper.version>4.2.3</mapper.version>
+        <spring.boot.test.version>3.1.5</spring.boot.test.version>
+        <spring.boot.version>2.7.15</spring.boot.version>
+        <spring.cloud.version>2023.0.0</spring.cloud.version>
+        <spring.cloud.alibaba.version>2022.0.0.0-RC2</spring.cloud.alibaba.version>
     </properties>
 
     <!-- 依赖声明 -->
@@ -34,15 +42,56 @@
             <!-- springBoot -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- springCloud -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- springCloud alibaba -->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring.cloud.alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- mysql8 -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+
+            <!-- druid连接池 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
             </dependency>
 
             <!-- mp -->
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>${mybatis-plus.version}</version>
+                <version>${mybatis.plus.version}</version>
+            </dependency>
+
+            <!-- mybatis 一键生成工具 -->
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper</artifactId>
+                <version>${mapper.version}</version>
             </dependency>
 
             <!-- huTool 的依赖配置-->
@@ -61,28 +110,15 @@
         </dependencies>
     </dependencyManagement>
 
-    <repositories>
-        <repository>
-            <id>public</id>
-            <name>aliyun nexus</name>
-            <url>https://maven.aliyun.com/repository/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>public</id>
-            <name>aliyun nexus</name>
-            <url>https://maven.aliyun.com/repository/public/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
